[package]
name = "exploration-mechanisms"
version = "0.1.0"
edition = "2021"

[dependencies]
mahf = "0.1.0"
mahf-bmf = "0.1.0"
mahf-coco = { git = "https://github.com/mahf-opt/mahf-coco", branch = "accelerated-fix" }
anyhow = "1.0.79"
eyre = "0.6.8"
itertools = "0.10.5"
rayon = "1.7.0"
indicatif = { version = "0.17.4", features = ["rayon"] }
scoped_threadpool = "0.1.9"
once_cell = "1.18.0"
clap = { version = "4.5.11", features = ["derive"] }

[patch.crates-io]
mahf = { git = "https://github.com/mahf-opt/mahf", branch = "exploration-operators" }

[[bin]]
name = "pso"
path = "src/bin/exploration_experiment/pso.rs"

[[bin]]
name = "pso_rr"
path = "src/bin/exploration_experiment/pso_rr.rs"

[[bin]]
name = "pso_npgm"
path = "src/bin/exploration_experiment/pso_npgm.rs"

[[bin]]
name = "pso_gpgm"
path = "src/bin/exploration_experiment/pso_gpgm.rs"

[[bin]]
name = "pso_srm"
path = "src/bin/exploration_experiment/pso_srm.rs"

[[bin]]
name = "pso_pdm"
path = "src/bin/exploration_experiment/pso_pdm.rs"

[[bin]]
name = "shade"
path = "src/bin/exploration_experiment/shade.rs"


[[bin]]
name = "irace_pso"
path = "src/bin/irace_tuning/irace_pso.rs"

[[bin]]
name = "irace_shade"
path = "src/bin/irace_tuning/irace_shade.rs"

[[bin]]
name = "irace_random_restart_pso"
path = "src/bin/irace_tuning/irace_random_restart_pso.rs"

[[bin]]
name = "irace_npgm_pso"
path = "src/bin/irace_tuning/irace_npgm_pso.rs"

[[bin]]
name = "irace_srm_pso"
path = "src/bin/irace_tuning/irace_srm_pso.rs"

[[bin]]
name = "irace_gpgm_pso"
path = "src/bin/irace_tuning/irace_gpgm_pso.rs"

[[bin]]
name = "irace_pdm_pso"
path = "src/bin/irace_tuning/irace_pdm_pso.rs"


